Fix plugin classname
Change-Id: I5c045f611363f2205428c029be18e6a27778a744

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ plugindev {
     }
     pluginImplementation {
         pluginId 'com.ullink.task-rules'
-        pluginImplementationClass 'com.ullink.gradle.TaskRules'
+        pluginImplementationClass 'com.ullink.gradle.TaskRulesPlugin'
     }
 
     done()
